# mesh_deformation

./: .gitignore  CMakeLists.txt  LICENSE  README.md
constraints/: armadillo.json  armadillo2.json  bar.json  bonjour.json  bonjour2.json  hey.json  spikes.json  test.json
src/: ARAP.cpp  Constraints.cpp  biharmonic.cpp  main.cpp  viewer.cpp
src/include/: Constraints.h  arap.h  biharmonic.h  viewer.h
